# textual-serial

./: .gitignore  LICENSE  main.py  pyproject.toml
tui/: TuiApp.py  TuiSerialView.py  style.tcss
