[project]
name = "textual-serial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
    "ruff>=0.11.8",
    "textual>=3.2.0",
    "textual-dev>=1.7.0",
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
